# optwrapper

./: .gitignore  AUTHORS  LICENSE  Makefile  README  README.md  SConstruct  __init__.py  arrayWrapper.c  arrayWrapper.pxd  arrayWrapper.pyx  base.pxd  base.pyx  cnpsol.pxd  configure  configure.ac  csnopt.pxd  dummy.c  example.py  example2.py  example_sparse.py  f2c.pxd  filehandler.h  fort.9  ipopt.py  nlp.py  npsol.h  npsol.pxd  npsol.pyx  npsolh.pxd  optwF2c.pxd  optwNlopt.py  optwNpsol.pxd  optwNpsol.pyx  optwSnopt.pyx  optwSolver.pxd  optwSolver.pyx  optw_npsol.c  optw_npsol.pyx  optw_snopt.c  (+9 more)
examples/: ex_linear3D.py  ex_nlp.py  example.py  example_ocp.py  example_sparse.py  lp_ex1.py  nlp_ex1.py  nlp_ex2.py  nlp_sparse_ex1.py  nlp_sparse_ex2.py  ocp_ex1.py  ocp_sparse_ex1.py  qp_ex1.py  qp_ex2.py  socp_ex1.py  socp_sparse_ex1.py
optwrapper/: .gitignore  __init__.py  __init__.py.in  base.c  base.pxd  base.pyx  csr_vector.py  filehandler.c  filehandler.f  glpk.pyx  glpkh.pxd  ipopt.pyx  ipstdcinterfaceh.pxd  lp.py  lssol.c  lssol.pyx  lssolh.pxd  nlp.py  npsol.c  npsol.pyx  npsolh.pxd  ocp.py  pwm_transform.py  qp.py  qpoases.pyx  qpoaseshpp.pxd  scipy_linprog.py  scipy_minimize.py  snlp.py  snopt.c  snopt.pyx  snopth.pxd  socp.py  test_socp.py  typedefs.pxd  typedefs.pxd.in  utils.c  utils.pxd  utils.pyx  wavelet_transform.py
src/: __init__.py  base.c  base.pyx  dummy.c  filehandler.f  filehandler.pxd  npsol.c  npsol.pyx  snopt.c  snopt.pyx  utils.c
